# persona-ipsum

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: App.tsx  GenerateIpsumMenu.tsx  Menu.tsx  PersonIpsum.tsx  styles.css  test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs
src/Components/: CommerceMenu.tsx  CompanyMenu.tsx  LoremMenu.tsx  PersonMenu.tsx  TableBase.tsx
src/Components/Parts/: Button.tsx
src/Utils/: CopyToClipbord.ts
src/css/: GenerateIpsumMenu.css  PersonMenu.css
