[package]
name = "persona-ipsum"
version = "0.0.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "persona_ipsum_bin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib", "lib"]

[[bin]]
name = "persona_ipsum_bin"
path = "./src/main.rs"
